# ZeroInertia

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Caddyfile  Caddyfile.staging  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  prometheus.dev.yml  prometheus.yml
backend/: .dockerignore  .env.dev.example  .env.example  .env.prod.example  .env.staging.example  .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/scripts/: create_missing_inboxes.py
backend/alembic/versions/: 00638d32aa95_drop_recurrence_type_column.py  07ae0755f56f_initial_migration.py  09ce8d147243_remove_started_at_from_movies_table.py  13b2fc61bdca_initial_migration.py  19b6bd613074_add_reminder_minutes_to_tasks.py  1dedf57ba7d1_add_timezone_support_to_datetime_columns.py  1fb94fa770c0_add_tasks_table.py  2060de53e342_remove_unused_push_subscription_fields.py  2483c47275d4_add_last_activity_date_to_streaks.py  27ab2918ae1b_task_archiving.py  3206287ea00e_add_order_index.py  474083b2218f_add_media_tracking_tables.py  480b8f2a375c_add_recurrence_fields_to_tasks.py  48270e9259f2_add_project.py  49e99a5fc614_add_priorities_table_and_update_task_.py  4fa05d6bc550_add_notes_table.py  51048d04a50c_fix_section_rel.py  5298cd44f707_add_recurrence_interval_and_unit_fields.py  590197257ef2_add_push_subscriptions_table.py  5c8b1bdc30ae_add_is_inbox_column_to_projects_table.py  6120c9c434eb_add_genre_many_to_many_tables.py  6a59e0d8a5bc_add_order_idx_to_task.py  735313b8c25e_redesign_media_tables_to_separate_clean_.py  7e1299af8918_add_parent_id.py  80093d9ad8f2_add_section.py  83c6bc227569_add_recurring_task_id_to_tasks_table.py  afebb179081d_create_streaks_table.py  b0aedba85e96_add_manga_table.py  bd61e0e0a838_add_snooze_count_field_to_tasks.py  be6476d7e8f3_remove_season_number_from_shows.py  bf7c31d5b0f8_add_recurring_tasks_table.py  d6175226ab92_add_labels.py  d8d713e4edc6_add_checklist_and_checklist_item_tables.py  e4c4d30b6383_add_anime_table_and_anime_genres_.py  e70328c7b808_change_is_done_to_completed.py  e8b6334e3e05_add_note_links_table_for_backlinks_.py  eab170768b74_add_duration_minutes_to_tasks.py
backend/app/: main.py
backend/app/api/: deps.py  exception_handlers.py
backend/app/core/: database.py  exceptions.py  logging.py  metrics.py  onboarding.py  rate_limit.py  scheduler.py  seed.py
backend/app/middleware/: csrf.py
backend/app/models/: __init__.py  base.py  checklist.py  genre.py  label.py  media.py  note.py  note_link.py  priority.py  project.py  push_subscription.py  recurring_task.py  section.py  streak.py  task.py  task_completion.py  task_label.py  task_streak.py  task_template.py  user.py
backend/app/schemas/: checklist.py  (+14 more)
backend/scripts/: create_missing_inboxes.py
backend/tools/: docker-entrypoint.sh
(+242 files in other folders)
